Solved some missed dark mode color issues

--- a/dev/Styles/MessageList.less
+++ b/dev/Styles/MessageList.less
@@ -186,7 +186,7 @@ html.rl-no-preview-pane {
 		.listThreadUidDesc {
 			font-size: 16px;
 			padding: 7px 20px 6px 20px;
-			background-color: #aaa;
+			background-color: rgba(128,128,128,0.5);
 			border-bottom: 1px solid #888;
 			color: #fff;
 			cursor: pointer;
@@ -335,18 +335,14 @@ html.rl-no-preview-pane {
 		.threads-len {
 			.threads-len-data {
 
-				background-color: #eee;
-				color: #666;
 				border-radius: 6px;
 				padding: 2px 0 1px 6px;
 				margin-right: 2px;
 				border: 1px solid #ccc;
 
 				&:hover {
-					background-color: #aaa;
+					background-color: rgba(127,127,127,0.3);
 					border-color: #666;
-					text-shadow: 0 1px 0 #999;
-					color: #fff;
 				}
 			}
 		}
