--- a/dev/Styles/SystemDropDown.less
+++ b/dev/Styles/SystemDropDown.less
@@ -31,13 +31,6 @@
 		vertical-align: middle;
 	}
 
-	.logoPlace {
-		margin: -5px 10px 0 0;
-		font-size: 25px;
-		line-height: 30px;
-		height: 40px;
-	}
-
 	.audioPlace {
 		display: inline-block;
 		font-size: 30px;
