--- a/snappymail/v/0.0.0/themes/SquaresDark/styles.less
+++ b/snappymail/v/0.0.0/themes/SquaresDark/styles.less
@@ -93,7 +93,7 @@
 
 .legend,
 .b-compose .b-header .e-identity,
-.messageView .b-content .messageItem {
+.messageView .messageItem {
 	color: #fff;
 }
 
@@ -105,18 +105,18 @@
 }
 
 .g-ui-link,
-.messageView .b-content .messageItemHeader .informationShort a,
-.messageView .b-content .messageItem .bodyText .b-text-part a {
+.messageView .messageItemHeader .informationShort a,
+.messageView .messageItem .bodyText .b-text-part a {
 	color: #6AE;
 }
 
-.messageView .b-content .messageItemHeader,
-.messageView .b-content .messageItem .pgpEncrypted,
-.messageView .b-content .messageItem .pgpSigned,
-.messageView .b-content .messageItem .readReceipt,
-.messageView .b-content .messageItem .showImages,
-.messageView .b-content .messageItem .attachmentsPlace,
-.messageView .b-content .messageItem .attachmentsControls {
+.messageView .messageItemHeader,
+.messageView .messageItem .pgpEncrypted,
+.messageView .messageItem .pgpSigned,
+.messageView .messageItem .readReceipt,
+.messageView .messageItem .showImages,
+.messageView .messageItem .attachmentsPlace,
+.messageView .messageItem .attachmentsControls {
 	background-color: #222;
 	border-bottom-color: #444;
 }
